# azure-data-scraper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml  publish-to-test.yml  publish.yml  unit-test.yml
azure_data_scraper/: __init__.py  audit_scope_scraper.py  az_product_info.py  data_joiner.py  data_mapping.py  product_by_region_scraper.py
azure_data_scraper_pkg_test/: data_joiner.py  product_by_region_scraper.py
tests/: merged.json  test_01_audit_scope_scraper.py  test_02_product_by_region_scraper.py  test_03_az_product_info.py  test_AuditScopeNew.py  test_DataJoiner.py  test_ProductsByRegionNew.py  tests.json
