[tool.poetry]
name = "azure_data_scraper"
version = "0.1.6-alpha.0"
description = ""
authors = ["Tim Meyers <timothy.m.meyers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
lxml = "^4.6.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.11.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
